--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
     </section>
 
-    <section class="features8 cid-qq0ytPVfOs mbr-parallax-background" id="features8-9g" data-rv-view="7443">
+    <section class="features8 cid-qq0ytPVfOs mbr-parallax-background" id="features8-9g" data-rv-view="7443" style="background-image: url(https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80)">
     
     
 
